# robotnik_trajectory_suite

./: README.md
robotnik_trajectory_bringup/: mainpage.dox  manifest.xml
robotnik_trajectory_bringup/launch/: robotnik_trajectory_bringup.launch
robotnik_trajectory_control/config/: device_command_interfaces.yaml  robospect_interfaces.yaml  terabot_interfaces.yaml  widowx_interfaces.yaml
robotnik_trajectory_control/config/grippers/: rb1_gripper_interface.yaml  wsg50_gripper_gazebo_interface.yaml
robotnik_trajectory_control/launch/: control_trajectory_manager.launch  robospect.launch  rt_sim_trajectory.launch
robotnik_trajectory_control/launch/grippers/: wsg50_gripper_gazebo.launch
robotnik_trajectory_control/msg/: State.msg
robotnik_trajectory_control/src/robotnik_trajectory_control/: rt_gripper_exe.py  rt_traj_exe.py
robotnik_trajectory_control/src/robotnik_trajectory_control/gripper_interfaces/: rb1_gripper_interface.py  wsg50_gripper_gazebo.py
robotnik_trajectory_control/src/robotnik_trajectory_control/interfaces/: device_command_interface.py  float32_multiarray_command_interface.py  joint_trajectory_interface.py  kinova_command_interface.py
robotnik_trajectory_control/src/robotnik_trajectory_control/tests/: send_mico_arm_traj_test.py  send_terabot_traj_test.py
robotnik_trajectory_manager/: CMakeLists.txt  package.xml  setup.py
robotnik_trajectory_manager/config/: manager.yaml  rb1_positions.yaml  robot_loop_positions.yaml  robot_state_positions.yaml
robotnik_trajectory_manager/launch/: manager.launch
robotnik_trajectory_manager/src/robotnik_trajectory_manager/: rt_traj_manager.py  rt_traj_manager_loop.py
robotnik_trajectory_manager/srv/: GetJointsState.srv  GetStates.srv  LoadState.srv  SaveState.srv
robotnik_trajectory_pad/: CMakeLists.txt  package.xml
robotnik_trajectory_pad/config/: robotnik_trajectory_pad.yaml
robotnik_trajectory_pad/launch/: robotnik_trajectory_pad.launch
robotnik_trajectory_pad/msg/: State.msg
robotnik_trajectory_pad/src/: robotnik_trajectory_pad_node.cpp
robotnik_trajectory_planner/: CMakeLists.txt  package.xml
robotnik_trajectory_planner/config/: planner.yaml
robotnik_trajectory_planner/include/robotnik_trajectory_planner/: rt_traj_planner.h
robotnik_trajectory_planner/launch/: .planner.launch.swp  planner.launch
robotnik_trajectory_planner/msg/: CartesianEuler.msg  JointByJoint.msg  PointTraj.msg  State.msg  Trajectory.msg
robotnik_trajectory_planner/scripts/: send_test_commands.py
robotnik_trajectory_planner/src/: rt_traj_planner.cpp
robotnik_trajectory_planner/srv/: GetGroups.srv  GetJointsGroup.srv  SelectGroup.srv
robotnik_trajectory_suite/: CMakeLists.txt  package.xml
