<?xml version="1.0"?>
<package>
  <name>robotnik_trajectory_manager</name>
  <version>0.1.0</version>
  <description>The robotnik_trajectory_manager package. Manages the storage of positions and trajectories (based on positions)</description>

  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>


  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/robotnik_trajectory_manager</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="rnavarro@robotnik.es">Román Navarro</author> 


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>robotnik_msgs</build_depend>
  <build_depend>genmsg</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>robotnik_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>
