<?xml version="1.0"?>
<package>
  <name>robotnik_trajectory_pad</name>
  <version>1.0.0</version>
  <description>The robotnik_trajectory_pad package is intended to send movement commands to the robot</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>


  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/robotnik_trajectory_pad</url> -->


  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>  
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>robotnik_trajectory_planner</build_depend>
  <build_depend>robotnik_msgs</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>robotnik_trajectory_planner</run_depend>
  <run_depend>robotnik_msgs</run_depend>
 
  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
